--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" th:href="@{/css/style.css}"/>
-    <link rel="stylsheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 <body>
-<h1>Witaj w moim sklepie internetowym!</h1>
-<form action="/products">
-    <button class="btn btn-primary" type="submit">Pokaż produkty</button>
+<h1>Witaj w moim sklepie internetowym!<input disabled th:value="${login}"></h1>
+<form action="/myproducts">
+    <button class="btn btn-primary" type="submit">Pokaż moje produkty</button>
 </form>
 <form action="/findproduct">
     <button class="btn btn-success" type="submit">Znajdź produkt</button>
