--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
-    <link rel="stylsheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 <body>
 
@@ -11,10 +11,17 @@
     <label for="inputLogin">Login</label>
     <input type="text" name="login" id="inputLogin" placeholder="Login"/>
 
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" placeholder="Password"/>
+    <label for="inputPassword">Hasło</label>
+    <input type="password" id="inputPassword" name="password" placeholder="Hasło"/>
 
-    <button class="btn btn-lg btn-success" type="submit">Zaloguj się</button>
+    <button class="btn btn-success" type="submit">Zaloguj się</button>
+
+</form>
+<form action="/registration">
+        <label>Nie masz konta?</label>
+    <p>
+        <button class="btn btn-primary" type="submit">Załóż konto</button>
+    </p>
 </form>
 </body>
 </html>
